Fix an issue where the light theme briefly appears when loading pgAdmin or opening tools, if the user's UI theme preference is not set to light. #8711

--- a/web/pgadmin/browser/templates/browser/index.html
+++ b/web/pgadmin/browser/templates/browser/index.html
@@ -3,6 +3,10 @@
 {% block title %}{{ config.APP_NAME }}{% endblock %}
 
 {% block init_script %}
+// Set language and theme on the global window object
+window.pgAdmin = window.pgAdmin || {};
+window.pgAdmin.theme = "{{ theme }}";
+
 function parseConsoleArgs(args) {
   const retData = Array.from(args).map(arg => {
     try {
