--- a/web/pgadmin/browser/templates/browser/index.html
+++ b/web/pgadmin/browser/templates/browser/index.html
@@ -3,9 +3,8 @@
 {% block title %}{{ config.APP_NAME }}{% endblock %}
 
 {% block init_script %}
-// Set language and theme on the global window object
-window.pgAdmin = window.pgAdmin || {};
-window.pgAdmin.theme = "{{ theme }}";
+// Set theme on the global window object
+window.theme = "{{ theme }}";
 
 function parseConsoleArgs(args) {
   const retData = Array.from(args).map(arg => {
