Fixed an issue where light theme briefly appears when pgAdmin loads or tools open, even when a dark or system UI theme is preferred. #8711

--- a/web/pgadmin/browser/templates/browser/index.html
+++ b/web/pgadmin/browser/templates/browser/index.html
@@ -3,6 +3,9 @@
 {% block title %}{{ config.APP_NAME }}{% endblock %}
 
 {% block init_script %}
+// Set theme on the global window object
+window.theme = "{{ theme }}";
+
 function parseConsoleArgs(args) {
   const retData = Array.from(args).map(arg => {
     try {
